[tool.poetry]
name = "orcbench"
version = "0.1.4"
description = "OrcBench: A Representative Serverless Benchmark"
maintainers = ["Ryan Hancock <krhancoc@uwaterloo.ca>"]
authors = ["Ryan Hancock <krhancoc@uwaterloo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
scikit-learn = "^1.1.1"
pandas = "^1.4.3"
matplotlib = "^3.5.2"

[tool.poetry.scripts]
orcbench = "orcbench.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
